<resources>
    <string name="app_name">LoginViewMVVM</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email Address</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_website">Website</string>

    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_email">Email address is not valid</string>
    <string name="login_failed">Login failed</string>
    <string name="submit_button_text">Submit</string>
    <string name="login_title">Profile Creation</string>
    <string name="login_text">Use the form below to submit your portfolio.\nAn Email and password are required.</string>
    <string name="add_avatar">Tab to Add Avatar</string>
    <string name="welcome_message">Hello, %1$s!\nYour super awesome portfolio has been successfully. The preview below is what the community will see.</string>


</resources>